Implementar Banner - Introduccion, Primeros pasos

--- a/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/index.html
+++ b/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/index.html
@@ -44,6 +44,22 @@
 
         <main class="layout__main">
 
+
+             <!--  ------------------------------  -->
+            <!--  ----------  Banner  ----------  -->
+            <!--  ------------------------------  -->
+            <section class="main__banner main__background">
+
+                <img 
+                src="/06-jquery-desarrolloweb.com//01-manual-jquery/src/img/01-introduccion-jquery/img-02-demos.webp"
+                class="banner__img"
+                alt="Introducción jQuery" 
+                title="Introducción jQuery"
+            >
+
+            </section>
+
+
             <!--  
                 --------------------------------
                 ----------  1. demo1  ----------
