--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/01-pasos-para-utilizar-jquery-en-tu-web/index.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/01-pasos-para-utilizar-jquery-en-tu-web/index.html
@@ -44,6 +44,22 @@
 
         <main class="layout__main">
 
+
+            <!--  ------------------------------  -->
+            <!--  ----------  Banner  ----------  -->
+            <!--  ------------------------------  -->
+            <section class="main__banner main__background">
+
+                <img 
+                src="/06-jquery-desarrolloweb.com//01-manual-jquery/src/img/02-primeros-pasos-jquery-por-la-practica/img-01-pasos-usar-jquery.webp"
+                class="banner__img"
+                alt="Introducción jQuery" 
+                title="Introducción jQuery"
+            >
+
+            </section>
+
+
             <section class="main__pasos-jquery-en-web main__background">
 
                 <p>
