--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/02-añadir-quitar-clases/index.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/02-añadir-quitar-clases/index.html
@@ -32,6 +32,7 @@
 
     <div class="layout">
 
+
         <header class="layout__header">
             <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
             <h1 class="header__title"> 
@@ -42,7 +43,24 @@
             <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
         </header>
 
+
         <main class="layout__main">
+
+
+            <!--  ------------------------------  -->
+            <!--  ----------  Banner  ----------  -->
+            <!--  ------------------------------  -->
+            <section class="main__banner main__background">
+
+                <img 
+                    src="/06-jquery-desarrolloweb.com//01-manual-jquery/src/img/02-primeros-pasos-jquery-por-la-practica/img-02-clases-jquery.webp"
+                    class="banner__img"
+                    alt="Introducción jQuery" 
+                    title="Introducción jQuery"
+                >
+
+            </section>
+
 
             <section class="main__añadir-quitar-clases main__background">
 
