--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/03-mostrar-ocultar-elementos/index.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/03-mostrar-ocultar-elementos/index.html
@@ -44,6 +44,21 @@
 
         <main class="layout__main">
 
+
+            <!--  ------------------------------  -->
+            <!--  ----------  Banner  ----------  -->
+            <!--  ------------------------------  -->
+            <section class="main__banner main__background">
+
+                <img 
+                    src="/06-jquery-desarrolloweb.com//01-manual-jquery/src/img/02-primeros-pasos-jquery-por-la-practica/img-03-mostrar-ocultar-jquery.webp"
+                    class="banner__img"
+                    alt="Introducción jQuery" 
+                    title="Introducción jQuery"
+            >
+
+            </section>
+
             <section class="main__mostrar-ocultar-elementos main__background">
 
                 <form>
