--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/06-uso-ajax-sencillo-con-jquery/index.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/06-uso-ajax-sencillo-con-jquery/index.html
@@ -44,6 +44,23 @@
 
         <main class="layout__main">
 
+
+
+            <!--  ------------------------------  -->
+            <!--  ----------  Banner  ----------  -->
+            <!--  ------------------------------  -->
+            <section class="main__banner main__background">
+
+                <img 
+                    src="/06-jquery-desarrolloweb.com//01-manual-jquery/src/img/02-primeros-pasos-jquery-por-la-practica/img-06-ajax-sencillo-jquery.webp"
+                    class="banner__img"
+                    alt="Introducción jQuery" 
+                    title="Introducción jQuery"
+            >
+
+            </section>
+
+
             <section class="main__uso-ajax-sencillo-jquery main__background">
 
                 <div class="btn__container">
