Refactorización - 01 Manual jQuery - 02 Primeros pasos jQuery por la práctica

--- a/01-manual-jquery/01-introduccion-jquery/03-cuando-usar-jquery/index.html
+++ b/01-manual-jquery/01-introduccion-jquery/03-cuando-usar-jquery/index.html
@@ -52,7 +52,13 @@
                 ----------  Banner  ----------
                 ------------------------------  
             -->
-            <section class="main__banner main__background">
+            <section class="main__section">
+
+                <h2 class="main__title"> 
+                    Seccion 1 - Introducción a jQuery 
+                    <br> 
+                    3 - Cuando usar jQuery
+                </h2>
 
                 <img 
                     class="banner__img"
@@ -69,10 +75,10 @@
                 ----------  1. Definir Evento  ----------
                 -----------------------------------------
             -->
-            <section class="main__definir-evento main__background">
+            <section class="main__section">
 
                 <header class="main__header">
-                    <h2 class="main__title"> Definir evento  </h2>
+                    <h2 class="main__title"> 1. Definir evento  </h2>
                 </header>
 
                 <div id="capa3"> Haz clic en un botón </div>
@@ -90,10 +96,10 @@
                 ----------  2. Document Ready  ----------
                 -----------------------------------------
             -->
-            <section class="main__document-ready main__background">
+            <section class="main__section">
 
                 <header class="main__header">
-                    <h2 class="main__title"> Document Ready  </h2>
+                    <h2 class="main__title"> 2. Document Ready  </h2>
                 </header>
 
                 <div id="capa4"> 
@@ -108,10 +114,10 @@
                 ----------  3. Recorrer Párrafos  ----------
                 --------------------------------------------
             -->
-            <section class="main__recorrer-parrafos main__background">
+            <section class="main__section">
 
                 <header class="main__header">
-                    <h2 class="main__title"> Recorrer Párrafos  </h2>
+                    <h2 class="main__title"> 3. Recorrer Párrafos  </h2>
                 </header>
 
                 <p> item 1 </p>
@@ -131,10 +137,10 @@
                 ----------  4. Acceso API  ----------
                 -------------------------------------
             -->
-            <section class="main__acceso-api main__background">
+            <section class="main__section">
                 
                 <header class="main__header">
-                    <h2 class="main__title"> Acceso a una  API  </h2>
+                    <h2 class="main__title"> 4. Acceso a una  API  </h2>
                 </header>
 
                 <div id="info1"> </div>
@@ -148,10 +154,10 @@
                 ----------  5. Recuperar y Mostrar Datos con JavaScript  ----------
                 -------------------------------------------------------------------
             -->
-            <section class="main__recuperar-mostrar-datos-javascript main__background">
+            <section class="main__section">
 
                 <header class="main__header">
-                    <h2 class="main__title"> Recuperar y Mostrar Datos con JavaScript  </h2>
+                    <h2 class="main__title"> 5. Recuperar y Mostrar Datos con JavaScript  </h2>
                 </header>
 
                 <div class="btn__container">
@@ -170,10 +176,10 @@
                 ----------  6. Recuperar y Mostrar Datos con jQuery  ----------
                 ---------------------------------------------------------------
             -->
-            <section class="main__recuperar-mostrar-datos-jquery main__background">
+            <section class="main__section">
 
                 <header class="main__header">
-                    <h2 class="main__title"> Recuperar y Mostrar Datos con jQuery  </h2>
+                    <h2 class="main__title"> 6. Recuperar y Mostrar Datos con jQuery  </h2>
                 </header>
 
                 <div class="btn__container">
