--- a/01-manual-jquery/src/services/02-primeros-pasos-jquery-por-la-practica/contenido-ajax.html
+++ b/01-manual-jquery/src/services/02-primeros-pasos-jquery-por-la-practica/contenido-ajax.html
@@ -9,50 +9,54 @@
 -->
 
 
+<div class="contenido__ajax">
 
-<h2> Contenido del Archivo Ajax </h2>
+    <br>
+    <h2> Contenido del Archivo Ajax </h2>
+    <br>
 
-<br>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Perferendis delectus, consequuntur a dolore placeat, 
+        autem quo facere fugit recusandae accusamus error. 
+        Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+    </p>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+    <br>
 
-<br>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Perferendis delectus, consequuntur a dolore placeat, 
+        autem quo facere fugit recusandae accusamus error. 
+        Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+    </p>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+    <br>
 
-<br>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Perferendis delectus, consequuntur a dolore placeat, 
+        autem quo facere fugit recusandae accusamus error. 
+        Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+    </p>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+    <br>
 
-<br>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Perferendis delectus, consequuntur a dolore placeat, 
+        autem quo facere fugit recusandae accusamus error. 
+        Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+    </p>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+    <br>
 
-<br>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Perferendis delectus, consequuntur a dolore placeat, 
+        autem quo facere fugit recusandae accusamus error. 
+        Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+    </p>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+</div>
+
