--- a/01-manual-jquery/01-introduccion-jquery/index.html
+++ b/01-manual-jquery/01-introduccion-jquery/index.html
@@ -52,8 +52,10 @@
         <!--  ----------  MAIN  ----------  -->
         <main class="layout__main">
 
-            <section class="main__banner main__background">
+            <section class="main__section">
 
+                <h2 class="main__title"> Seccion 1 - Introducción a jQuery </h2>
+                
                 <img 
                     class="banner__img" 
                     src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/img/banner-jquery-escuela-it.webp"
